WebCore: selectionHasStyle doesn't handle text-specific properties properly https://bugs.webkit.org/show_bug.cgi?id=27858

Patch by Ryosuke Niwa <rniwa@webkit.org> on 2009-08-07
Reviewed by Justin Garcia.

This patch modifies selectionHasStyle so that it returns TrueTriState when text styles
(text-decoration, font-style, font-weight, & color) are present in all text nodes,
regardless of whether the style is also present in their ancestor nodes or not.
e.g. New behavior concludes that <b><i>hello</i><i>world</i></b> has italic style.

WebKit now applies the text styles (bold, italic, etc) if the specified style was not present on
at least one text node, rather than at the beginning of selection except on Mac.
On Mac, WebKit applies the text style if the style was not present at the beginning of style.

Test: editing/execCommand/toggle-compound-styles.html

* editing/ApplyStyleCommand.cpp:
(WebCore::getPropertiesNotInComputedStyle): bug fix, must use copy instead of makeMutable for a mutable style.
* editing/Editor.cpp:
(WebCore::):
(WebCore::triStateOfStyleInComputedStyle): Added a boolean type to ignore text-specific styles
(WebCore::Editor::selectionHasStyle): Ignores text-specific styles for all but text nodes
* editing/EditorCommand.cpp:
(WebCore::executeToggleStyle): Uses selectionHasStyle instead of selectionStartHasStyle

LayoutTests: selectionHasStyle doesn't handle text-specific properties properly
https://bugs.webkit.org/show_bug.cgi?id=27858

Patch by Ryosuke Niwa <rniwa@webkit.org> on 2009-08-07
Reviewed by Justin Garcia.

This patch adds toggle-compound-styles to make sure WebKit can handle nested text styles
such as <b><i>hello</i>world</b> (italicized) and <b><i>hello</i>world</b> (not italicized)
on all platforms except on Mac (to match TextEdit's behavior).

* editing/execCommand/resources/toggle-compound-styles.js: Added.
(testSingleToggle):
* editing/execCommand/toggle-compound-styles.html: Added.
* platform/gtk/editing/execCommand: Added.
* platform/gtk/editing/execCommand/toggle-compound-styles-expected.txt: Added.
* platform/mac/editing/execCommand/toggle-compound-styles-expected.txt: Added.
* platform/qt/editing/execCommand/toggle-compound-styles-expected.txt: Added.
* platform/win/editing/execCommand: Added.
* platform/win/editing/execCommand/toggle-compound-styles-expected.txt: Added.



Canonical link: https://commits.webkit.org/38523@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46920 268f45cc-cd09-0410-ab3c-d52691b4dbfc